# course_work_v2

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
tests/: test_utils.py
