[tool.poetry]
name = "course-work-v2"
version = "0.1.0"
description = ""
authors = ["Anastasia <aburlakova45@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_v2"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
